2006-02-28  Germain Garand  <germain@ebooksfrance.org>
         
        Common-case style selection optimisation inspired from WebCore.

        * css/css_base.cpp/.h: add 'Class' to possible matching modes
        * css/cssstyleselector.cpp: treat 'Class' extra, not anymore as an ordinary List.
        * css/parser.cpp/y: use 'Class' matching mode 
        * html/html_elementimpl.cpp: when parsing ATTR_CLASS, set a boolean to remember if it is or not a class list.
        * xml/dom_elementimpl.{cpp,h}: add m_hasClassList boolean + setter/getter

2006-02-28  Germain Garand  <germain@ebooksfrance.org>

        * rendering/render_object.cpp (dirtyFormattingContext): be more efficient with inlineflow objects.
        * rendering/render_block.cpp (layoutBlockChildren): be more efficient with regard to positioned objects relayout. 
        Merge WC margin-collapse regression fix (WC/#3508). 
        (layoutPositionedObjects) Objects with staticX() need a relayout too.
        * rendering/render_canvas.cpp (layout): no need to relayout positioned objects here. This would mark entire branches of the tree 
        as needing a layout, thus stalling update requests in those branches (#116626)

2006-01-14  Allan Sandfeld Jensen <kde@carewolf.com>

        * rendering/render_image.cpp (calcReplacedWidth,calcReplacedHeight):
        Respect both min/max sizes and aspect-ratio when resizing.

2006-01-03  Allan Sandfeld Jensen <kde@carewolf.com>

        * css/cssparser.cpp: Allow content: normal | none
        * css/cssstyleselector.cpp: Handle content: normal | none

2005-12-09  Germain Garand  <germain@ebooksfrance.org>

        implement quirky HTML alignment ; introduce special float values
        -khtml-left/-khtml-right to this effect.

        * css/cssparser.cpp: ditto. Fix memory leak from Function struct deletion also.
        * css/cssstyleselector.cpp: ditto.
        * css/html4.css: set as default style for table[align="left/right"]